<resources>
    <string name="app_name">GQSystem</string>
    <string name="default_user_name">管理员</string>
    <string name="company_association_name">山东省轻工业安全生产管理协会</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">主页</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <!--加载-->
    <string name="loading">加载中&#8230;</string>
    <string name="load_error">加载出错</string>
    <string name="no_network">没有网络，点击重试</string>
    <string name="no_data">没有数据</string>

    <!--错误-->
    <string name="error_unknown">未知错误</string>
    <string name="error_http">HTTP错误</string>
    <string name="error_network">当前网络不可用，请检查您的网络连接</string>
    <string name="error_parse">解析错误</string>
    <string name="error_ssl">SSL错误</string>


    <string name="copyright">Copyright \u00a9 2020-present 山东省轻工业安全生产管理协会</string>
    <string name="policy">协会方针</string>
    <string name="honesty">诚信</string>
    <string name="quality">优质</string>
    <string name="efficient">高效</string>
    <string name="boutique">精品</string>
    <string name="innovation">创新</string>

    <string name="time">时间：</string>
    <string name="status">状态：</string>

    <string name="todo">待开发</string>
    <string name="doing">进行中</string>
    <string name="done">已结束</string>

    <!--    侧边栏数据-->
    <string name="home">主页</string>
    <string name="company">企业信息</string>
    <string name="cost">费用添加</string>
    <string name="leader_stroke">领导动态</string>
    <string name="person_information">人员信息</string>
    <string name="reviewer_information">评审人员</string>
    <string name="update">更新</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="exit">退出</string>
    <string name="inquiry">查询</string>
    <string name="meeting">会议</string>

    <string name="verification">验证</string>
    <string name="reset">重置</string>
    <string name="login">登录</string>
    <string name="user_name">用户名</string>
    <string name="user_pwd">密码</string>


    <string name="project_todo">待开发</string>
    <string name="project_doing">进行中</string>

    <string name="project_name_1">标准化</string>
    <string name="project_name_2">双重预防机制</string>
    <string name="project_name_3">评估评价</string>
    <string name="project_name_4">安全管理体系提升</string>
    <string name="project_name_5">安全生产信息化</string>
    <string name="project_name_6">其他</string>
    <string name="project_name_7">政府采购</string>
    <string name="project_name_8">资料共享</string>


    <string name="company_name_title">企业名称：</string>
    <string name="default_company_name">默认企业名称</string>

    <string name="project_name_title">项目名称：</string>
    <string name="default_project_name">默认项目名称</string>

    <string name="project_type_title">项目类型：</string>
    <string name="default_project_type">默认项目类型</string>

    <string name="project_leader">项目负责人</string>
    <string name="market_leader">市场负责人</string>

    <string name="report_type_title">报告类别：</string>
    <string name="report_default_type">默认报告类别</string>

    <string name="work_number">工作次数：</string>
    <string name="last_work_time">最后一次工作时间：</string>

    <string name="current_progress">当前进度：</string>


    <string name="invoice_information">查看企业开票信息</string>


    <string name="finger_title">App已锁定，请验证指纹</string>
    <string name="lock_title">App长时间未操作已锁定，请重新验证</string>

    <string name="finger_success">验证成功</string>
    <string name="finger_fail">指纹验证失败，请重试!</string>

    <string name="finger_verification">指纹验证</string>
    <string name="pwd_verification">密码验证</string>

    <string name="cancel">取消</string>
    <string name="input_pwd">请输入密码解锁</string>
    <string name="input_pwd_error">密码错误，请重试！</string>


    <string name="biometric_dialog_cancel">取消</string>
    <string name="biometric_dialog_title">验证</string>
    <string name="biometric_dialog_subtitle">请使用指纹进行验证</string>
    <string name="biometric_dialog_state_normal">指纹传感器</string>
    <string name="biometric_dialog_state_failed">指纹验证失败，请重试</string>
    <string name="biometric_dialog_state_error">指纹验证错误，请使用密码解锁</string>
    <string name="biometric_dialog_state_error_enable_process">Verification error, setup failed</string>
    <string name="biometric_dialog_state_succeeded">指纹验证成功</string>
    <string name="biometric_dialog_use_password">使用密码</string>


    <string name="debug_string_time">2020-03-05——2020-03-05</string>
    <string name="debug_string_click">可点击字符串</string>
    <string name="debug_string_normal">测试用字符串，正常长度的字符串</string>
    <string name="debug_string_sort">短字符串</string>
    <string name="debug_string_long">测试用字符串，查看过长的字符串在界面中的显示效果，createBy：山东省轻工业安全生产管理协会|山东冠隆安全工程师事务所有限公司;createTime:2020-03-06 13:53:00</string>


    <string name="add">添加</string>
    <string name="company_constant">企业联系人</string>
    <string name="company_related">关联企业</string>
    <string name="company_material">企业资料</string>


    <string name="project_info">项目信息</string>
    <string name="contract_info">合同信息</string>
    <string name="cost_account">成本核算</string>


    <string name="check_update">检查更新</string>
    <string name="update_note">更新说明</string>

    <string name="copyright_zh">鲁轻安协 版权所有</string>
    <string name="copyright_en">Copyright \u00a9 2020-present 鲁轻安协.</string>
    <string name="all_right">All Rights Reserved.</string>


</resources>
