<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_company"
            android:icon="@mipmap/ic_company"
            android:title="@string/company" />
        <item
            android:id="@+id/nav_leader_stroke"
            android:icon="@mipmap/ic_alarm"
            android:title="@string/leader_stroke" />

        <item
            android:id="@+id/project_all_list"
            android:icon="@mipmap/ic_other_project"
            android:title="@string/project_info" />

        <item
            android:id="@+id/nav_reviewer_information"
            android:icon="@mipmap/ic_reviewer"
            android:title="@string/reviewer_information" />

        <item
            android:id="@+id/nav_person_information"
            android:icon="@mipmap/ic_person"
            android:title="@string/person_information" />

    </group>

    <item android:title="Setting">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@mipmap/ic_about"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@mipmap/ic_settings"
                android:title="@string/setting" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_exit"
        android:icon="@mipmap/ic_logout"
        android:title="@string/exit"/>

</menu>
