<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@mipmap/splash_bg" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_48"
            android:layout_marginTop="@dimen/dp_80"
            android:text="@string/policy"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_26"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_48"
            android:layout_marginTop="@dimen/dp_48"
            android:text="@string/honesty"
            android:textSize="@dimen/text_24"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_24"
            android:text="@string/quality"
            android:textSize="@dimen/text_24"
            app:layout_constraintLeft_toRightOf="@+id/tv_1"
            app:layout_constraintTop_toTopOf="@+id/tv_1" />

        <TextView
            android:id="@+id/tv_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_24"
            android:text="@string/efficient"
            android:textSize="@dimen/text_24"
            app:layout_constraintLeft_toRightOf="@+id/tv_2"
            app:layout_constraintTop_toTopOf="@+id/tv_1" />


        <TextView
            android:id="@+id/tv_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_48"
            android:layout_marginTop="@dimen/dp_24"
            android:text="@string/boutique"
            android:textSize="@dimen/text_24"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_1" />

        <TextView
            android:id="@+id/tv_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_24"
            android:layout_marginLeft="@dimen/margin"
            android:text="@string/innovation"
            android:textSize="@dimen/text_24"
            app:layout_constraintLeft_toRightOf="@+id/tv_4"
            app:layout_constraintTop_toBottomOf="@+id/tv_1" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:text="@string/copyright"
            android:textSize="@dimen/text_12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>