<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="项目名称"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_project_name"
        style="@style/Item_TextView_Content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/tv_market_leader"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/debug_string_sort" />


    <TextView
        android:id="@+id/tv_market_leader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8"
        android:text="@string/market_leader"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_project_name" />


    <TextView
        android:id="@+id/tv_market_leader_name"
        style="@style/Item_TextView_Content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8"
        app:layout_constraintLeft_toRightOf="@+id/tv_market_leader"
        app:layout_constraintTop_toBottomOf="@+id/tv_project_name"
        tools:text="@string/default_user_name" />


    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debug_string_time"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_market_leader_name" />

</androidx.constraintlayout.widget.ConstraintLayout>