<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/company_name_title"
        app:layout_constraintBottom_toBottomOf="@+id/tv_company_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_company_name" />

    <TextView
        android:id="@+id/tv_company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/default_company_name"
        app:layout_constraintLeft_toRightOf="@+id/tv_1"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="项目名称："
        app:layout_constraintBottom_toBottomOf="@+id/tv_project_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_project_name" />

    <TextView
        android:id="@+id/tv_project_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/default_project_name"
        app:layout_constraintLeft_toRightOf="@+id/tv_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_company_name" />


    <TextView
        android:id="@+id/tv_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/project_leader"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_project_name" />

    <TextView
        android:id="@+id/tv_project_leader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/default_user_name"
        app:layout_constraintLeft_toRightOf="@+id/tv_3"
        app:layout_constraintTop_toBottomOf="@+id/tv_project_name" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/status"
        app:layout_constraintRight_toLeftOf="@+id/tv_status"
        app:layout_constraintTop_toBottomOf="@+id/tv_project_name" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:text="@string/doing"
        android:textColor="@color/blue"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_project_name" />


    <!--    -->

    <TextView
        android:id="@+id/tv_2_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="项目名称："
        app:layout_constraintBottom_toBottomOf="@+id/tv_project_name_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_project_name_1" />

    <TextView
        android:id="@+id/tv_project_name_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/default_project_name"
        app:layout_constraintLeft_toRightOf="@+id/tv_2_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_status" />


    <TextView
        android:id="@+id/tv_3_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/project_leader"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_project_name_1" />

    <TextView
        android:id="@+id/tv_project_leader_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/default_user_name"
        app:layout_constraintLeft_toRightOf="@+id/tv_3_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_project_name_1" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/status"
        app:layout_constraintRight_toLeftOf="@+id/tv_status_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_project_name_1" />

    <TextView
        android:id="@+id/tv_status_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:text="@string/done"
        android:textColor="@color/green"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_project_name_1" />

    <View
        android:id="@+id/view_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/lightgray"
        app:layout_constraintTop_toBottomOf="@+id/tv_status_1" />


</androidx.constraintlayout.widget.ConstraintLayout>